--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,28 @@ dmypy.json
 .pyre/
 
 citibike_data/
+Citibike Data/JC-201912-citibike-tripdata.csv
+Citibike Data/JC-201907-citibike-tripdata.csv
+Citibike Data/JC-201908-citibike-tripdata.csv
+Citibike Data/JC-201909-citibike-tripdata.csv
+Citibike Data/JC-201910-citibike-tripdata.csv
+Citibike Data/JC-201911-citibike-tripdata.csv
+Citibike Data/JC-202001-citibike-tripdata.csv
+Citibike Data/JC-202002-citibike-tripdata.csv
+Citibike Data/JC-202003-citibike-tripdata.csv
+Citibike Data/JC-202004-citibike-tripdata.csv
+Citibike Data/JC-202005-citibike-tripdata.csv
+Citibike Data/JC-202006-citibike-tripdata.csv
+Citibike Data/JC-202007-citibike-tripdata.csv
+Citibike Data/JC-202008-citibike-tripdata.csv
+Citibike Data/JC-202009-citibike-tripdata.csv
+Citibike Data/JC-202010-citibike-tripdata.csv
+Citibike Data/JC-202011-citibike-tripdata.csv
+Citibike Data/JC-202012-citibike-tripdata.csv
+Citibike Data/JC-202101-citibike-tripdata.csv
+Citibike Data/JC-202102-citibike-tripdata.csv
+Citibike Data/JC-202103-citibike-tripdata.csv
+Citibike Data/JC-202104-citibike-tripdata.csv
+Citibike Data/JC-202105-citibike-tripdata.csv
+Citibike Data/JC-202106-citibike-tripdata.csv
+Citibike Data/JC-202107-citibike-tripdata.csv
