--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,4 @@ Citibike Data/JC-202104-citibike-tripdata.csv
 Citibike Data/JC-202105-citibike-tripdata.csv
 Citibike Data/JC-202106-citibike-tripdata.csv
 Citibike Data/JC-202107-citibike-tripdata.csv
+output_data/all_bikedata.csv
